--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.17.2",
     "axios": "^0.24.0",
     "next": "12.0.4",
     "next-auth": "latest",
     "next-redux-wrapper": "^7.0.5",
+    "next-with-less": "^2.0.2",
     "react": "17.0.2",
     "react-content-loader": "^6.0.3",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
